# tshoko

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
ladspa/ladspa_sdk_1.15/src/: Makefile
ladspa/ladspa_sdk_1.15/src/plugins/: tshoko_auto_level.c
matlab/: auto_level.m  open_auto_level_output.m  process_playlist_auto_level.m  run_auto_level.m  test.m
scripts/: build.sh  clean.sh  rebuild.sh
src/: main.c
src/common/: cerror.h  cmath.c  cmath.h  common.h  ctypes.h  dsp_error.h  dsp_math.c  dsp_math.h  dsp_types.h
src/modules/auto_level/: auto_level.c  auto_level.h
src/modules/file_saver/: file_saver.c  file_saver.h
src/modules/tools/: biquad.c  biquad.h
src/utils/: getopt.c  getopt.h  wav.c  wav.h
test/: CMakeLists.txt  main.c
